--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								Schloss Störmthal	
 							</h1>
 							<p class="pt-20 pb-20">
-								Herzlich willkommen auf dem Internetauftrittes des Barokschlosses Störmthal 
+								Herzlich willkommen auf dem Internetauftritt des Barokschlosses Störmthal 
 							</p>
 						</div>											
 					</div>
