--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								Schloss Störmthal	
 							</h1>
 							<p class="pt-20 pb-20">
-								Herzlich willkommen auf dem Internetauftritt des Barokschlosses Störmthal 
+								Herzlich Willkommen auf dem Internetauftritt des Barokschlosses Störmthal 
 							</p>
 						</div>											
 					</div>
